fix: fixed tooltips being unresponsive on mobile

--- a/modules/routes/web/static/style.css
+++ b/modules/routes/web/static/style.css
@@ -104,14 +104,14 @@ a:hover {
 
 .item-stats-tooltip {
     display: none;
-    position: absolute;
+    position: fixed;
     background-color: rgba(21, 10, 24, 0.95);
     border: 2px solid var(--tooltip-border-color);
     border-radius: 5px;
     padding: 10px;
     width: 375px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    z-index: 1;
+    z-index: 999;
 }
 
 #items-container>div>.item-stats-tooltip {
